--- a/pom.xml
+++ b/pom.xml
@@ -1024,6 +1024,18 @@
     </profile>
 
     <profile>
+      <id>spark-2.2</id>
+      <activation>
+        <property>
+          <name>spark-2.2</name>
+        </property>
+      </activation>
+      <properties>
+        <spark.version>2.2.0</spark.version>
+      </properties>
+    </profile>
+
+    <profile>
       <id>skip-parent-modules</id>
       <activation>
         <file>
