--- a/pom.xml
+++ b/pom.xml
@@ -1027,6 +1027,7 @@
       </activation>
       <properties>
         <spark.version>2.2.0</spark.version>
+        <java.version>1.8</java.version>
       </properties>
     </profile>
 
