--- a/docs/_data/project.yml
+++ b/docs/_data/project.yml
@@ -16,6 +16,6 @@
 # Apache Project configurations
 #
 name: Apache Livy
-version: 0.4.0-SNAPSHOT
+version: 0.4.0-incubating-SNAPSHOT
 
 podling: true
