--- a/integration-test/minicluster-dependencies/pom.xml
+++ b/integration-test/minicluster-dependencies/pom.xml
@@ -26,10 +26,10 @@
     <groupId>org.apache.livy</groupId>
     <artifactId>multi-scala-project-root</artifactId>
     <relativePath>../../scala/pom.xml</relativePath>
-    <version>0.4.0-incubating-SNAPSHOT</version>
+    <version>0.4.0-incubating</version>
   </parent>
   <artifactId>minicluster-dependencies-parent</artifactId>
-  <version>0.4.0-incubating-SNAPSHOT</version>
+  <version>0.4.0-incubating</version>
   <packaging>pom</packaging>
   <properties>
     <skipDeploy>true</skipDeploy>
