initial javadoc warnings and error fixes

--- a/pom.xml
+++ b/pom.xml
@@ -784,6 +784,14 @@
           <version>1.13</version>
         </plugin>
 
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-javadoc-plugin</artifactId>
+          <version>3.0.0-M1</version>
+          <configuration>
+            <failOnError>true</failOnError>
+          </configuration>
+        </plugin>
       </plugins>
     </pluginManagement>
 
