--- a/server/pom.xml
+++ b/server/pom.xml
@@ -110,7 +110,8 @@
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
-      <scope>test</scope>
+      <version>${httpclient.version}</version>
+      <scope>compile</scope>
     </dependency>
 
     <dependency>
