--- a/.travis.yml
+++ b/.travis.yml
@@ -57,17 +57,17 @@ before_install:
   - sudo apt-get -y install python3-pip python-dev
   - sudo apt-get -y install libkrb5-dev
   - sudo apt-get -y remove python-setuptools
-  - pip install --user --upgrade pip "setuptools < 36"
+  - pip2 install --user --upgrade pip "setuptools < 36"
   - pip3 install --user --upgrade pip "setuptools < 36"
-  - pip install --user codecov cloudpickle
+  - pip2 install --user codecov cloudpickle
   - pip3 install --user cloudpickle
 
 install:
   - mvn $MVN_FLAG install -Dskip -DskipTests -DskipITs -Dmaven.javadoc.skip=true -B -V
 
 before_script:
-  - pip install --user requests pytest flaky flake8 requests-kerberos
-  - pip3 install --user requests pytest flaky requests-kerberos
+  - pip2 install --user "requests >= 2.10.0" pytest flaky flake8 requests-kerberos
+  - pip3 install --user "requests >= 2.10.0" pytest flaky requests-kerberos
 
 script:
   - mvn $MVN_FLAG verify -e
