--- a/pom.xml
+++ b/pom.xml
@@ -1104,6 +1104,7 @@
       </activation>
       <properties>
         <spark.version>2.0.1</spark.version>
+        <py4j.version>0.10.3</py4j.version>
         <spark.bin.download.url>
           https://d3kbcqa49mib13.cloudfront.net/spark-2.0.1-bin-hadoop2.7.tgz
         </spark.bin.download.url>
@@ -1120,6 +1121,7 @@
       </activation>
       <properties>
         <spark.version>2.1.0</spark.version>
+        <py4j.version>0.10.4</py4j.version>
         <spark.bin.download.url>
           https://d3kbcqa49mib13.cloudfront.net/spark-2.1.0-bin-hadoop2.7.tgz
         </spark.bin.download.url>
@@ -1137,6 +1139,7 @@
       <properties>
         <spark.version>2.2.0</spark.version>
         <java.version>1.8</java.version>
+        <py4j.version>0.10.4</py4j.version>
         <spark.bin.download.url>
           https://d3kbcqa49mib13.cloudfront.net/spark-2.2.0-bin-hadoop2.7.tgz
         </spark.bin.download.url>
