[LIVY-399][TEST] Enable real test for PySpark and SparkR interpreters
Currently because we lack pyspark and sparkr dependencies in our environment, so we neglect the pyspark and sparkr integration tests, here propose a way to enable these integration tests. The solution is mainly borrowed from Zeppelin - to download Spark binary before integration tests, so that we will have a complete Spark environment to do the test. Because of this several modules like minicluster-dependencies are not required, so here removed such modules.

Besides, we proposed to remove real test implementations, since we never used real test before and it mainly did what scripts should do with Scala code, which makes it hard to maintain. Also for now mini-cluster test is quite close to real test, so it is not so useful to still keep real test.

Author: jerryshao <sshao@hortonworks.com>

Closes #49 from jerryshao/LIVY-399.

--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,10 @@
     <test.redirectToFile>true</test.redirectToFile>
     <execution.root>${user.dir}</execution.root>
     <spark.home>${execution.root}/dev/spark</spark.home>
+    <spark.bin.download.url>
+      https://d3kbcqa49mib13.cloudfront.net/spark-1.6.2-bin-hadoop2.6.tgz
+    </spark.bin.download.url>
+    <spark.bin.name>spark-1.6.2-bin-hadoop2.6</spark.bin.name>
     <!--  used for testing, NCSARequestLog use it for access log  -->
     <livy.log.dir>${basedir}/target</livy.log.dir>
 
@@ -228,9 +232,6 @@
     <module>scala-api/scala-2.11</module>
     <module>server</module>
     <module>test-lib</module>
-    <module>integration-test/minicluster-dependencies</module>
-    <module>integration-test/minicluster-dependencies/scala-2.10</module>
-    <module>integration-test/minicluster-dependencies/scala-2.11</module>
     <module>integration-test</module>
   </modules>
 
@@ -791,6 +792,12 @@
           <version>1.13</version>
         </plugin>
 
+        <plugin>
+          <groupId>com.googlecode.maven-download-plugin</groupId>
+          <artifactId>download-maven-plugin</artifactId>
+          <version>1.3.0</version>
+        </plugin>
+
       </plugins>
     </pluginManagement>
 
@@ -1097,6 +1104,11 @@
       </activation>
       <properties>
         <spark.version>2.0.1</spark.version>
+        <py4j.version>0.10.3</py4j.version>
+        <spark.bin.download.url>
+          https://d3kbcqa49mib13.cloudfront.net/spark-2.0.1-bin-hadoop2.7.tgz
+        </spark.bin.download.url>
+        <spark.bin.name>spark-2.0.1-bin-hadoop2.7</spark.bin.name>
       </properties>
     </profile>
 
@@ -1109,6 +1121,11 @@
       </activation>
       <properties>
         <spark.version>2.1.0</spark.version>
+        <py4j.version>0.10.4</py4j.version>
+        <spark.bin.download.url>
+          https://d3kbcqa49mib13.cloudfront.net/spark-2.1.0-bin-hadoop2.7.tgz
+        </spark.bin.download.url>
+        <spark.bin.name>spark-2.1.0-bin-hadoop2.7</spark.bin.name>
       </properties>
     </profile>
 
@@ -1122,6 +1139,11 @@
       <properties>
         <spark.version>2.2.0</spark.version>
         <java.version>1.8</java.version>
+        <py4j.version>0.10.4</py4j.version>
+        <spark.bin.download.url>
+          https://d3kbcqa49mib13.cloudfront.net/spark-2.2.0-bin-hadoop2.7.tgz
+        </spark.bin.download.url>
+        <spark.bin.name>spark-2.2.0-bin-hadoop2.7</spark.bin.name>
       </properties>
     </profile>
 
