--- a/pom.xml
+++ b/pom.xml
@@ -98,11 +98,11 @@
     <py4j.version>0.9</py4j.version>
     <scala-2.10.version>2.10.4</scala-2.10.version>
     <scala-2.11.version>2.11.8</scala-2.11.version>
-    <scala.binary.version>2.10</scala.binary.version>
-    <scala.version>${scala-2.10.version}</scala.version>
+    <scala.binary.version>2.11</scala.binary.version>
+    <scala.version>${scala-2.11.version}</scala.version>
     <scalatest.version>2.2.4</scalatest.version>
     <scalatra.version>2.3.0</scalatra.version>
-    <java.version>1.7</java.version>
+    <java.version>1.8</java.version>
     <minJavaVersion>1.7</minJavaVersion>
     <maxJavaVersion>1.8</maxJavaVersion>
     <test.redirectToFile>true</test.redirectToFile>
@@ -209,6 +209,17 @@
         <enabled>false</enabled>
       </snapshots>
     </repository>
+    <repository>
+      <id>apache-repo-snapshot</id>
+      <name>Apache Repository Snapshot</name>
+      <url>http://repository.apache.org/snapshots</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
   </repositories>
 
   <modules>
@@ -219,20 +230,20 @@
     <module>core</module>
     <module>core/scala-2.10</module>
     <module>core/scala-2.11</module>
-    <module>coverage</module>
-    <module>examples</module>
-    <module>python-api</module>
+    <!-- <module>coverage</module> -->
+    <!-- <module>examples</module> -->
+    <!-- <module>python-api</module> -->
     <module>repl</module>
     <module>repl/scala-2.10</module>
     <module>repl/scala-2.11</module>
     <module>rsc</module>
     <module>scala</module>
     <module>scala-api</module>
-    <module>scala-api/scala-2.10</module>
+    <!-- <module>scala-api/scala-2.10</module> -->
     <module>scala-api/scala-2.11</module>
     <module>server</module>
     <module>test-lib</module>
-    <module>integration-test</module>
+    <!-- <module>integration-test</module> -->
   </modules>
 
   <dependencies>
@@ -679,7 +690,9 @@
             <recompileMode>incremental</recompileMode>
             <useZincServer>true</useZincServer>
             <checkMultipleScalaVersions>false</checkMultipleScalaVersions>
-            <args>
+	    <args>
+	      <arg>-Xmax-classfile-name</arg>
+	      <arg>140</arg>
               <arg>-unchecked</arg>
               <arg>-deprecation</arg>
               <arg>-feature</arg>
