added details to javadoc index page

--- a/pom.xml
+++ b/pom.xml
@@ -797,6 +797,8 @@
           <artifactId>maven-javadoc-plugin</artifactId>
           <version>3.0.0-M1</version>
           <configuration>
+            <doctitle>Livy ${project.version} Java API</doctitle>
+            <windowtitle>Livy ${project.version} JavaDoc</windowtitle>
             <failOnError>true</failOnError>
             <excludePackageNames>*.test,*.example,*.common</excludePackageNames>
           </configuration>
