--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 
   <groupId>org.apache.livy</groupId>
   <artifactId>livy-main</artifactId>
-  <version>0.4.1-incubating-SNAPSHOT</version>
+  <version>0.4.0-incubating</version>
   <packaging>pom</packaging>
   <name>Livy Project Parent POM</name>
   <description>Livy Project</description>
@@ -82,7 +82,7 @@
     <hadoop.scope>compile</hadoop.scope>
     <spark.version>1.6.2</spark.version>
     <commons-codec.version>1.9</commons-codec.version>
-    <httpclient.version>4.5.3</httpclient.version>
+    <httpclient.version>4.5.2</httpclient.version>
     <httpcore.version>4.4.4</httpcore.version>
     <jackson.version>2.4.4</jackson.version>
     <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
@@ -894,17 +894,17 @@
             <configuration>
               <target>
                 <copy file="${execution.root}/scalastyle.xml"
-                  tofile="${project.build.directory}/scalastyle.xml" />
+                      tofile="${project.build.directory}/scalastyle.xml" />
                 <replace file="${project.build.directory}/scalastyle.xml"
-                  token="{{COPYRIGHT_HEADER}}"
-                  value="${copyright.header}" />
+                         token="{{COPYRIGHT_HEADER}}"
+                         value="${copyright.header}" />
                 <copy file="${execution.root}/checkstyle.xml"
-                  tofile="${project.build.directory}/checkstyle.xml" />
+                      tofile="${project.build.directory}/checkstyle.xml" />
                 <echo file="${project.build.directory}/checkstyle.header"
-                  message="${copyright.header}" />
+                      message="${copyright.header}" />
                 <replace file="${project.build.directory}/checkstyle.xml"
-                  token="{{HEADER_FILE}}"
-                  value="${project.build.directory}/checkstyle.header" />
+                         token="{{HEADER_FILE}}"
+                         value="${project.build.directory}/checkstyle.header" />
               </target>
             </configuration>
           </execution>
@@ -1139,39 +1139,39 @@
       </build>
     </profile>
 
-  <profile>
-    <!-- This will search remote and local repos to generate THIRD-PARTY license file, make sure
-    livy artifacts existed in either remote or local repos, otherwise run mvn install before. -->
-    <id>generate-third-party</id>
-    <activation>
-      <property>
-        <name>generate-third-party</name>
-      </property>
-    </activation>
-    <build>
-      <plugins>
-        <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>license-maven-plugin</artifactId>
-          <inherited>false</inherited>
-          <configuration>
-            <outputDirectory>${execution.root}</outputDirectory>
-            <thirdPartyFilename>THIRD-PARTY</thirdPartyFilename>
-            <sortArtifactByName>true</sortArtifactByName>
-            <fileTemplate>${execution.root}/dev/third-party-file.ftl</fileTemplate>
-          </configuration>
-          <executions>
-            <execution>
-              <phase>prepare-package</phase>
-              <goals>
-                <goal>aggregate-add-third-party</goal>
-              </goals>
-            </execution>
-          </executions>
-        </plugin>
-      </plugins>
-    </build>
-  </profile>
+    <profile>
+      <!-- This will search remote and local repos to generate THIRD-PARTY license file, make sure
+      livy artifacts existed in either remote or local repos, otherwise run mvn install before. -->
+      <id>generate-third-party</id>
+      <activation>
+        <property>
+          <name>generate-third-party</name>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>license-maven-plugin</artifactId>
+            <inherited>false</inherited>
+            <configuration>
+              <outputDirectory>${execution.root}</outputDirectory>
+              <thirdPartyFilename>THIRD-PARTY</thirdPartyFilename>
+              <sortArtifactByName>true</sortArtifactByName>
+              <fileTemplate>${execution.root}/dev/third-party-file.ftl</fileTemplate>
+            </configuration>
+            <executions>
+              <execution>
+                <phase>prepare-package</phase>
+                <goals>
+                  <goal>aggregate-add-third-party</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
 
   </profiles>
 
