--- a/rsc/pom.xml
+++ b/rsc/pom.xml
@@ -21,12 +21,12 @@
   <parent>
     <groupId>org.apache.livy</groupId>
     <artifactId>livy-main</artifactId>
-    <version>0.5.0-incubating-SNAPSHOT</version>
+    <version>0.5.0-incubating</version>
   </parent>
 
   <groupId>org.apache.livy</groupId>
   <artifactId>livy-rsc</artifactId>
-  <version>0.5.0-incubating-SNAPSHOT</version>
+  <version>0.5.0-incubating</version>
   <packaging>jar</packaging>
 
   <properties>
