[MINOR][BUILD] Improve release-build script
Improved release-build.sh based on the 0.5.0-incubating release process.

Includes:

- Instead of forcing user to set env it prompts for required info, this also protects password inout
- Creates temp dir to hold files created in release process and makes sure git ignores it

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ reports/
 metastore_db/
 derby.log
 dependency-reduced-pom.xml
+release-staging/
 
 # For python setup.py, which pollutes the source dirs.
 python-api/dist
