--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ reports/
 metastore_db/
 derby.log
 dependency-reduced-pom.xml
+release-staging/
 
 # For python setup.py, which pollutes the source dirs.
 python-api/dist
