--- a/.travis.yml
+++ b/.travis.yml
@@ -21,9 +21,9 @@ language: scala
 
 env:
   matrix:
-    - MVN_FLAG='-Pspark-1.6 -DskipTests'
-    - MVN_FLAG='-Pspark-2.0 -DskipTests'
-    - MVN_FLAG='-Pspark-2.1 -DskipTests'
+    - MVN_FLAG='-DskipTests'
+    - MVN_FLAG='-Pspark-2.0-it -DskipTests'
+    - MVN_FLAG='-Pspark-2.1-it -DskipTests'
     - MVN_FLAG='-Pspark-1.6 -DskipITs'
     - MVN_FLAG='-Pspark-2.0 -DskipITs'
     - MVN_FLAG='-Pspark-2.1 -DskipITs'
@@ -31,11 +31,11 @@ env:
 matrix:
   include:
       # Spark 2.2+ will only be verified using JDK8
-    - env: MVN_FLAG='-Pspark-2.2 -DskipTests'
+      - env: MVN_FLAG='-Pspark-2.2-it -DskipTests'
       jdk: oraclejdk8
     - env: MVN_FLAG='-Pspark-2.2 -DskipITs'
       jdk: oraclejdk8
-    - env: MVN_FLAG='-Pspark-2.3 -DskipTests'
+    - env: MVN_FLAG='-Pspark-2.3-it -DskipTests'
       jdk: oraclejdk8
     - env: MVN_FLAG='-Pspark-2.3 -DskipITs'
       jdk: oraclejdk8
