[LIVY-468] Reverse proxy support

--- a/conf/livy.conf.template
+++ b/conf/livy.conf.template
@@ -29,6 +29,10 @@
 # What port to start the server on.
 # livy.server.port = 8998
 
+# What base path ui should work on. By default UI is mounted on "/".
+# E.g.: livy.ui.basePath = /my_livy - result in mounting UI on /my_livy/
+# livy.ui.basePath = ""
+
 # What spark master Livy sessions should use.
 # livy.spark.master = local
 
