--- a/thriftserver/pom.xml
+++ b/thriftserver/pom.xml
@@ -182,7 +182,7 @@
     <dependency>
       <groupId>org.apache.thrift</groupId>
       <artifactId>libthrift</artifactId>
-      <version>0.9.3</version>
+      <version>${libthrift.version}</version>
     </dependency>
     <dependency>
       <groupId>org.datanucleus</groupId>
