--- a/thriftserver/server/pom.xml
+++ b/thriftserver/server/pom.xml
@@ -27,6 +27,9 @@
 
   <artifactId>livy-thriftserver</artifactId>
 
+  <properties>
+    <libthrift.version>0.9.3</libthrift.version>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>org.apache.hive</groupId>
